BUDGET/force-app/main/default/objects/Recurring_Expense__c/Recurring_Expense__c.object-meta.xml
<CustomObject>
    <label>Recurring Expense</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recurring Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>