BUDGET/force-app/main/default/objects/Recurring_Expense__c/fields/Monthly_Expense__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Expense__c</fullName>
    <formula>IF(
TEXT(Expense_Frequency__c) = &quot;One-Time&quot;,
IF(
MONTH(TODAY()) = MONTH(Expense_Date__c) &amp;&amp; YEAR(TODAY()) = YEAR(Expense_Date__c),
Expense_Amount__c,
0
),
CASE(
TEXT(Expense_Frequency__c),
&quot;Monthly&quot;, Expense_Amount__c,
&quot;Quarterly&quot;, Expense_Amount__c / 3,
&quot;Bi annually&quot;, Expense_Amount__c / 6,
&quot;Yearly&quot;, Expense_Amount__c / 12,
0
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>