BUDGET/force-app/main/default/objects/Recurring_Expense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Expense_Name__c</columns>
    <columns>Expense_Type__c</columns>
    <columns>Expense_Frequency__c</columns>
    <columns>Expense_Date__c</columns>
    <columns>Expense_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>